# QT

CaloryCounter/CaloryCounter/: CMakeLists.txt  person.cpp  person.h  widget.cpp  widget.h  widget.ui
CaloryCounter/build-CaloryCounter-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
CheckBox&RadioButton/CheckBox_RadioButton/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
CheckBox&RadioButton/build-CheckBox_RadioButton-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
GUIIntro/GUIntro/: CMakeLists.txt  widget.cpp  widget.ui
GUIIntro/build-GUIntro-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
GuessMyNumber/GuessMyNumber/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
GuessMyNumber/build-GuessMyNumber-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Lambdas/Lambdas/: CMakeLists.txt  main.cpp
Lambdas/build-Lambdas-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
MainWindow/MainWindow/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
MainWindow/build-MainWindow-Desktop_Qt_6_4_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
Menus/menus/: CMakeLists.txt  mainwindow.cpp  (+3 more)
classes/classes/: CMakeLists.txt  animal.cpp  animal.h  canino.cpp  canino.h  dog.cpp  laptop.cpp  laptop.h  main.cpp  mamiferos.cpp  mamiferos.h
(+1820 files in other folders)
